--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,36 @@
 /*  your css code here. If applicable */
+.container{
+	background-color:#cccccc;
+}
+h2, h4{
+	text-align:center;
+	padding:5px;
+}
+.player_one{
+	background-color:white;
+	width:90%;
+	height:20%;
+	border:1px solid black;
+	margin:auto;
+	padding:10px;
+	border-radius:5px;
+}
+a{
+	text-decoration:none;
+	color:black;
+}
+.player_two{
+	padding:5px;
+	border: 1px solid black;
+	border-radius:5px;
+	width:50%;
+	height:60%;
+	margin:auto;
+	background-color:white;
+}
+video{
+	width:90%;
+	height:50%;
+	margin:auto;
+	display:block;
+}
