--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,13 @@ a{
 	color:black;
 }
 .player_two{
-	padding:5px;
+	padding:15px;
 	border: 1px solid black;
 	border-radius:5px;
 	width:50%;
 	height:60%;
 	margin:auto;
+/* 	display:block; */
 	background-color:white;
 }
 video{
