--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,17 @@
 	background-color:#cccccc;
 }
 h2, h4{
+	padding-top:0px;
 	text-align:center;
-	padding:5px;
+	margin-top:0px;
 }
 .player_one{
 	background-color:white;
-	width:90%;
-	height:20%;
+	width:95%;
+	height:90%;
 	border:1px solid black;
-	margin:auto;
-	padding:10px;
+	margin: 10px ;
+	padding: 10px;
 	border-radius:5px;
 }
 a{
@@ -26,12 +27,15 @@ a{
 	width:50%;
 	height:60%;
 	margin:auto;
-/* 	display:block; */
 	background-color:white;
 }
 video{
-	width:90%;
-	height:50%;
+	width:100%;
+	height:80%;
+	margin:auto;
+	display:block;
+}
+audio{
 	margin:auto;
 	display:block;
 }
